<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DoomPlay</string>
    <string name="search">Search</string>
    <string name="folders">Folders</string>
    <string name="all_songs">All Songs</string>
    <string name="artists">Artists</string>
    <string name="Playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="add_to_playlist">add to playlist</string>
    <string name="delete">delete</string>
    <string name="sleep_timer">sleep timer</string>
    <string name="equalizer">equalizer</string>
    <string name="loading_music">loading music</string>
    <string name="search_hint">search the music</string>
    <string name="Rescan">rescan</string>
    <string name="full_screen">fullScreen</string>
    <string name="return_small">listScreen</string>
    <string name="hide_controls">Show/Hide controls</string>
    <string name="new_playlist">new playlist</string>
    <string name="set_track_as_ringtone">set track as ringtone</string>
    <string name="advertisement_setting">advertisement\'s settings</string>
    <string name="delete_playlist">delete playlist</string>
    <string name="play_all">play all</string>
    <string name="track_up">track up</string>
    <string name="track_down">track down</string>
    <string name="delete_track">delete track</string>
    <string name="enter_playlist_name">enter the playlist\'s name</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="invalid_name">Invalid name</string>
    <string name="to_playlist">to playlist</string>
    <string name="zeros">0.00</string>
    <string name="enter_search_query">enter search query</string>
    <string name="sleep_after_playing">Sleep after playing x tracks</string>
    <string name="sleep_after_minit">Sleep after x min</string>
    <string name="disable">disable</string>
    <string name="enable">enable</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="didnt_match">didn\'t match any tracks</string>
    <string name="voice_search">voice search</string>
    <string name="to_track">to track</string>
    <string name="tracks_dont_match">tracks don\'t match</string>
    <string name="settings">settings</string>
    <string name="exit">exit</string>
    <string name="send_report">feedback</string>
    <string name="lyrics">lyrics</string>
    <string name="like">like</string>
    <string name="sign_in">sign in</string>
    <string name="refresh">refresh</string>
    <string name="please_wait">Please wait</string>
    <string name="dislike">dislike</string>
    <string name="interrupt">interrupt refreshing</string>
    <string name="download">download</string>
    <string name="edit">edit</string>
    <string name="add_to_album">add to album</string>
    <string name = "check_internet">Check your internet connection</string>
    <string name ="error_refresh">Error, try to refresh</string>
    <string name ="doesnt_available">sorry,this function doesn\'t available on your device</string>
    <string name = "track_downloading">Track is still downloading</string>
    <string name = "cant_get_audio">Can\'t get audio</string>
    <string name = "tracks_added">Tracks added</string>
    <string name = "fill_fields">Please fill all fields</string>
    <string name = "has_been_sent">Message has been successfully sent</string>
    <string name = "no_valid_files">There\'s no valid files in this directory</string>
    <string name="Audio">Audio</string>
    <string name="audio_settings">audio settings</string>
    <string name="Call">Call</string>
    <string name="set_pause_while">set pause while calling</string>
    <string name="On_call">On call</string>
    <string name="after_call">After call</string>
    <string name="play_after_call">playing after call (if was playing before)</string>
    <string name="My_music">My music</string>
    <string name="Top_rated">Top rated</string>
    <string name="Friends">Friends</string>
    <string name="Groups">Groups</string>
    <string name="send">send</string>
    <string name="the_subject">The subject</string>
    <string name="the_message">The message</string>
    <string name="Audio_Focus">AudioFocus</string>
    <string name="set_pause_on_short">set pause on change of short audiofocus (sms/navigation/etc.)</string>
    <string name="Short_audiofocus">Short audiofocus</string>
    <string name="set_pause_on_long">set pause on change of long audiofocus (another player/game/etc.)</string>
    <string name="Long_audiofocus">Long audiofocus</string>
    <string name="Gain_focus">Gain focus</string>
    <string name="after_gain_focus">playing after gain audiofocus</string>
    <string name="Vk">Vk</string>
    <string name="vkontakte_setting">vkontakte settings</string>
    <string name="max_my_music">max size of music got from my music</string>
    <string name="Max_music">Max size of my music</string>
    <string name="max_friends">maxsize of music got from friends and groups</string>
    <string name="Max_friends">Max size of friends and group</string>
    <string name="Max_search">Max size of search</string>
    <string name="max_search">max size of music got from search</string>
    <string name="max_popular">max size of music got from popular</string>
    <string name="Max_popular">Max size of popular</string>
    <string name="Broadcast">Broadcast</string>
    <string name="set_as_status">set current playing track as status</string>
    <string name="Album_art">Album art</string>
    <string name="album_art_settings">album art settings</string>
    <string name="download_album_art">download album art from internet</string>
    <string name="Download_album_art">Download album art</string>
    <string name="quality">choose quality of album art</string>
    <string name="Quality">Quality</string>
    <string name="when_internet">download albumArt if track is playing from internet</string>
    <string name="When_internet">When playing from internet</string>
    <string name="Other">Other</string>
    <string name="Other_settings">Other settings</string>
    <string name="Scroll">Smooth scroll</string>
    <string name="scroll">scroll to track after it changed</string>
    <string name="Onclick_notif">On click notification</string>
    <string name="onclick_notif">return on full screen if true ,else on small screen</string>
    <string name="Show_controls">Show controls</string>
    <string name="show_controls">to show controls on first open</string>
    <string name="languages">change language</string>
    <string name="Languages">Languages</string>
    <string name="About">About</string>
    <string name="about_app">about application</string>
    <string name="Copyright">Copyright</string>
    <string name="Vladislav_Krot">© 2013 Vladislav Krot (DoomPlay)</string>
    <string name="Contact">Contact to author</string>
    <string name="Want_to_help">Want to help as developer?</string>
    <string name="Downloading">Downloading</string>
    <string name="paused">Paused</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="error">Error</string>
    <string name="please_sign_in">Please log in</string>
    <string name="registr_succes">Authorization is successful</string>
    <string name="cant_delete_file">Can\'t delete file</string>
    <string name="was_set_as_ringtone">Track was set as ringtone</string>
    <string name="save_after_buffer">save the file if it fully buffered</string>
    <string name="Save_after_buffer">Save track after buffering</string>
    <string name="chooser_label">choose folder</string>
    <string name="save_albumarts">save cover arts in this directory</string>
    <string name="Save_albumarts">Saved cover art\'s folder</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="Saved_tracks_folder">Saved track\'s folder</string>
    <string name="Initial_folder">The initial folder</string>
    <string name="Licenses">Licenses</string>
    <string name="playlist_already_exist">playlist already exists</string>
    <string name="enter_more_symbols">enter more symbols</string>
    <string name="delete_special_symbols">only letters</string>
    <string name="bad_cue">CUE file not recognized or not supported</string>
    <string name="no_cue_src">CUE file references non-existing source</string>
    <string name="cue_src_ext">CUE file references source file with unsupported extension</string>
    <string name="bad_playlist">Empty or invalid playlist</string>
    <string name="low_freq">Low frequency amplification</string>
    <string name="hight_freq">Hight frequency amplification</string>
    <string name="reverb">Reverb</string>
    <string name="sounds_power">Sound\'s power</string>
    <string name="LF">LF</string>
    <string name="HF">HF</string>
    <string name="SP">SP</string>
    <string-array name ="count_values">
        <item>10</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>600</item>
    </string-array>
    <string-array name ="quality">
        <item>bad</item>
        <item>middle</item>
        <item>hight</item>
    </string-array>
    <string-array name ="quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name ="language">
        <item>en</item>
        <item>ru</item>
    </string-array>


</resources>
