<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">


             <PreferenceScreen
                     android:title="@string/Audio"
                     android:summary="@string/audio_settings">
                 <PreferenceCategory
                         android:title="@string/Call">
                     <CheckBoxPreference
                             android:key="oncall"
                             android:summary="@string/set_pause_while"
                             android:title="@string/On_call"
                             android:defaultValue="true">
                     </CheckBoxPreference>
                     <CheckBoxPreference
                             android:dependency="oncall"
                             android:key="aftercall"
                             android:summary="@string/play_after_call"
                             android:title="@string/after_call"
                             android:defaultValue="true">
                     </CheckBoxPreference>
                 </PreferenceCategory>

                 <PreferenceCategory
                         android:title="@string/Audio_Focus">
                     <CheckBoxPreference
                             android:key="shortfocus"
                             android:summary="@string/set_pause_on_short"
                             android:title="@string/Short_audiofocus"
                             android:defaultValue="false">
                     </CheckBoxPreference>

                     <CheckBoxPreference
                             android:key="longfocus"
                             android:summary="@string/set_pause_on_long"
                             android:title="@string/Long_audiofocus"
                             android:defaultValue="false">
                     </CheckBoxPreference>

                     <CheckBoxPreference
                             android:key="gainfocus"
                             android:summary="@string/after_gain_focus"
                             android:title="@string/Gain_focus"
                             android:defaultValue="false">
                     </CheckBoxPreference>
                 </PreferenceCategory>
             </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/Vk"
            android:summary="@string/vkontakte_setting">
        <ListPreference
                android:entryValues="@array/count_values"
                android:entries="@array/count_values"
                android:key="countvkall"
                android:summary="@string/max_my_music"
                android:title="@string/Max_music"
                android:defaultValue="200">
        </ListPreference>
        <ListPreference
                android:entryValues="@array/count_values"
                android:entries="@array/count_values"
                android:key="countfrgr"
                android:summary="@string/max_friends"
                android:title="@string/Max_friends"
                android:defaultValue="200">
        </ListPreference>
        <ListPreference
                android:entryValues="@array/count_values"
                android:entries="@array/count_values"
                android:key="countvksearch"
                android:summary="@string/max_search"
                android:title="@string/Max_search"
                android:defaultValue="50">
        </ListPreference>
        <ListPreference
                android:entryValues="@array/count_values"
                android:entries="@array/count_values"
                android:key="countvkpopular"
                android:summary="@string/max_popular"
                android:title="@string/Max_popular"
                android:defaultValue="200">
        </ListPreference>
        <CheckBoxPreference
                android:key="broadcast"
                android:summary="@string/set_as_status"
                android:title="@string/Broadcast"
                android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
                android:key="savevkfile"
                android:summary="@string/save_after_buffer"
                android:title="@string/Save_after_buffer"
                android:defaultValue="true">
        </CheckBoxPreference>

    </PreferenceScreen>

         <PreferenceScreen
                 android:title="@string/Album_art"
                 android:summary="@string/album_art_settings">
             <CheckBoxPreference
                     android:key="downloadart"
                     android:summary="@string/download_album_art"
                     android:title="@string/Download_album_art"
                     android:defaultValue="true">
             </CheckBoxPreference>
             <ListPreference
                     android:entryValues="@array/quality_values"
                     android:entries="@array/quality"
                     android:dependency="downloadart"
                     android:key="qualityart"
                     android:summary="@string/quality"
                     android:defaultValue="2"
                     android:title="@string/Quality">
             </ListPreference>
             <CheckBoxPreference
                     android:dependency="downloadart"
                     android:key="artonline"
                     android:summary="@string/when_internet"
                     android:defaultValue="false"
                     android:title="@string/When_internet">
             </CheckBoxPreference>
         </PreferenceScreen>





        <PreferenceScreen
                android:title="@string/Other"
                android:summary="@string/Other_settings" >
            <CheckBoxPreference
                    android:key="scroll"
                    android:summary="@string/scroll"
                    android:title="@string/Scroll"
                    android:defaultValue="true">
            </CheckBoxPreference>

            <CheckBoxPreference
                    android:key="notifreturn"
                    android:summary="@string/onclick_notif"
                    android:title="@string/Onclick_notif"
                    android:defaultValue="true">
            </CheckBoxPreference>
            <CheckBoxPreference
                    android:key="hideoncreate"
                    android:summary="@string/show_controls"
                    android:title="@string/Show_controls"
                    android:defaultValue="true">
            </CheckBoxPreference>
        </PreferenceScreen>

    <ListPreference
            android:entryValues="@array/language"
            android:entries="@array/language"
            android:key="languages"
            android:summary="@string/languages"
            android:title="@string/Languages">
    </ListPreference>



        <PreferenceScreen
                android:title="@string/About"
                android:summary="@string/about_app">
            <PreferenceScreen
                    android:title="@string/Copyright"
                    android:summary="@string/Vladislav_Krot">
            </PreferenceScreen>
            <PreferenceScreen
                    android:title="@string/Contact"
                    android:summary="DoomPlaye@gmail.com"
                    android:key="contact">
            </PreferenceScreen>
            <PreferenceScreen
                    android:title="@string/Want_to_help"
                    android:summary="https://github.com/quxey/doomPlaye"
                    android:key="github">
            </PreferenceScreen>
        </PreferenceScreen>



</PreferenceScreen>