<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/itemReturnSmall"
            android:icon="@drawable/smallscreen"
            yourapp:showAsAction="always"
            android:title="@string/return_small">
    </item>
    <item
            android:id="@+id/itemGetLiricks"
            android:icon="@drawable/lyrics"
            yourapp:showAsAction="always"
            android:title="@string/lyrics">
    </item>
    <item
            android:id="@+id/itemAddtoPlaylist"
            yourapp:showAsAction="never"
            android:title="@string/add_to_playlist">
    </item>
    <item
            android:id="@+id/itemSetAsRingtone"
            yourapp:showAsAction="never"
            android:title="@string/set_track_as_ringtone">
    </item>
    <item
            android:id="@+id/itemSleep"
            yourapp:showAsAction="never"
            android:title="@string/sleep_timer">
    </item>
    <item
            android:id="@+id/itemEqualizer"
            yourapp:showAsAction="never"
            android:title="@string/equalizer">
    </item>
    <item
            android:id="@+id/itemSettings"
            yourapp:showAsAction="never"
            android:title ="@string/settings">
    </item>
    <item
            android:id="@+id/itemExit"
            yourapp:showAsAction="never"
            android:title ="@string/exit">
    </item>
</menu>