<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:yourapp="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/itemShowHide"
            android:icon="@drawable/show_hide"
            yourapp:showAsAction="always"
            android:title="@string/hide_controls">
    </item>
    <item
            android:id="@+id/itemFullScreen"
            android:icon="@drawable/fullscreen"
            yourapp:showAsAction="always"
            android:title="@string/full_screen">
    </item>
    <item
            android:id="@+id/itemRefresh"
            android:icon="@drawable/refresh"
            yourapp:showAsAction="ifRoom"
            android:title="@string/refresh">
    </item>
    <item
            android:id="@+id/itemInterrupt"
            android:showAsAction="never"
            android:title="@string/interrupt">
    </item>

    <item
            android:id="@+id/itemSleep"
            android:showAsAction="never"
            android:title="@string/sleep_timer">
    </item>
    <item
            android:id="@+id/itemEqualizer"
            android:showAsAction="never"
            android:title="@string/equalizer">
    </item>
    <item
            android:id="@+id/itemSettings"
            android:showAsAction="never"
            android:title ="@string/settings">
    </item>
    <item
            android:id="@+id/itemExit"
            android:showAsAction="never"
            android:title ="@string/exit">
    </item>
</menu>