<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        >


    <item
            android:id="@+id/itemShowHide"
            android:icon="@drawable/show_hide"
            android:showAsAction="always"
            android:title="@string/hide_controls">
    </item>
    <item
            android:id="@+id/itemFullScreen"
            android:icon="@drawable/fullscreen"
            android:showAsAction="always"
            android:title="@string/full_screen">
    </item>
    <item
            android:id="@+id/itemSleep"
            android:showAsAction="never"
            android:title="@string/sleep_timer">
    </item>
    <item
            android:id="@+id/itemSettings"
            android:showAsAction="never"
            android:title ="@string/settings">
    </item>
    <item
            android:id="@+id/itemExit"
            android:showAsAction="never"
            android:title ="@string/exit">
    </item>
</menu>