<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/itemMoveToAlbum"
            android:icon="@drawable/to_album"
            yourapp:showAsAction="always"
            android:title="@string/add_to_album">
    </item>
    <item
            android:id="@+id/itemGetLiricks"
            android:icon="@drawable/lyrics"
            yourapp:showAsAction="always"
            android:title="@string/lyrics">
    </item>
    <item
            android:id="@+id/itemDislike"
            android:icon="@drawable/dislike"
            yourapp:showAsAction="always"
            android:title="@string/dislike">
    </item>
    <item
            android:id="@+id/itemDownload"
            android:icon="@drawable/action_download"
            yourapp:showAsAction="always"
            android:title="@string/download">
    </item>
</menu>