<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/itemToPlaylist"
            android:icon="@drawable/add_to_playlist"
            yourapp:showAsAction="always"
            android:title="@string/add_to_playlist">
    </item>

    <item
            android:id="@+id/itemSetAsRingtone"
            android:icon="@drawable/ringtone"
            yourapp:showAsAction="always"
            android:title="@string/set_track_as_ringtone">
    </item>
    <item
            android:id="@+id/itemGetLiricks"
            android:icon="@drawable/lyrics"
            yourapp:showAsAction="always"
            android:title="@string/lyrics">
    </item>
</menu>
