<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editNewPlaylist" android:hint="@string/enter_playlist_name"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_name"
            android:id="@+id/textDialogWrongName" android:visibility="gone" android:textStyle="italic"
            android:textSize="14sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingTop="5dp" >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/buttonSaveNewDialog" android:layout_weight="1" android:layout_marginRight="4dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/buttonCancelNewDialog"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"/>
    </LinearLayout>
</LinearLayout>