<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:padding="20dp">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_after_playing"
            android:id="@+id/textView" android:gravity="center" android:paddingTop="10dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingBottom="10dp" android:paddingTop="5dp"
            android:longClickable="false">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/textSeekTrack" android:layout_gravity="center" android:textSize="12sp"
                android:paddingLeft="2dp" android:paddingRight="2dp"/>
        <SeekBar
                android:id="@+id/seekTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/scrubber_progress_red"
                android:thumb="@drawable/scrubber_control_red"
                android:indeterminate="false"
                android:layout_weight="1"
                style="?android:attr/progressBarStyleHorizontal"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:id="@+id/textView3" android:layout_gravity="center_vertical" android:textSize="12sp"/>
    </LinearLayout>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_after_minit"
            android:id="@+id/textView1" android:gravity="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingBottom="20dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/textSeekMin" android:layout_gravity="center_vertical" android:textSize="12sp"
                android:paddingLeft="2dp" android:paddingRight="2dp" android:paddingTop="5dp"/>
        <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekMin" android:paddingTop="5dp" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:id="@+id/textView2" android:textSize="12sp" android:layout_gravity="center_vertical"
                android:paddingTop="5dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDEnable" android:layout_weight="1" android:text="@string/enable"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDDisable" android:layout_weight="1" android:text="@string/disable"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDCancel" android:layout_weight="1" android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>